--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -57,7 +57,6 @@ allow 107.174.83.58;
 allow 107.175.31.193;
 allow 107.189.10.175;
 allow 107.189.10.20;
-allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
@@ -123,6 +122,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -138,7 +138,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.158.253.93;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
@@ -998,6 +997,7 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
+allow 221.191.130.37;
 allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1150,7 +1150,6 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
-allow 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
@@ -1612,6 +1611,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
 allow 2a0d:8140:1fff:4a9a::1;
@@ -1629,6 +1629,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1730,6 +1731,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.44.238.25;
 allow 35.0.127.52;
+allow 35.221.131.248;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.56.239;
@@ -1828,6 +1830,7 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
+allow 45.87.43.93;
 allow 45.9.148.50;
 allow 45.9.168.108;
 allow 45.9.168.113;
