--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -57,6 +57,7 @@ allow 107.174.83.58;
 allow 107.175.31.193;
 allow 107.189.10.175;
 allow 107.189.10.20;
+allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
@@ -69,7 +70,6 @@ allow 107.189.12.58;
 allow 107.189.12.7;
 allow 107.189.12.88;
 allow 107.189.13.180;
-allow 107.189.13.212;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
@@ -256,6 +256,7 @@ allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
+allow 177.149.149.2;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -1033,7 +1034,6 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.13;
@@ -1150,6 +1150,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
@@ -1365,7 +1366,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
-allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1614,7 +1614,6 @@ allow 2a0c:e300::23;
 allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1756,7 +1755,6 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1841,7 +1839,6 @@ allow 45.95.169.16;
 allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
-allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
@@ -1868,7 +1865,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.101.10;
-allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1916,7 +1912,6 @@ allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
-allow 69.126.112.240;
 allow 70.34.249.72;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1947,7 +1942,6 @@ allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
-allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
