--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,7 +122,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -700,6 +699,7 @@ deny 194.53.137.156;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
+deny 195.26.247.64;
 deny 195.47.238.176;
 deny 195.47.238.177;
 deny 195.47.238.178;
@@ -1034,6 +1034,7 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.13;
@@ -1365,6 +1366,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1614,6 +1616,7 @@ deny 2a0c:e300::23;
 deny 2a0d:2787:1b:d19::a;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1628,7 +1631,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1653,7 +1655,14 @@ deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
+deny 2a0f:ca80:1337::47f8:fb5;
+deny 2a0f:ca80:1337::5071:cafb;
+deny 2a0f:ca80:1337::64fa:7d6b;
+deny 2a0f:ca80:1337::6d9e:fb47;
+deny 2a0f:ca80:1337::72f7:ed26;
 deny 2a0f:ca80:1337::7da1:75ca;
+deny 2a0f:ca80:1337::9bb3:5385;
+deny 2a0f:ca80:1337::b5a4:a762;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1675,6 +1684,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
@@ -1698,7 +1708,6 @@ deny 2a12:a800:2:1:45:138:16:239;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
-deny 2a12:a800:2:1:45:138:16:70;
 deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
@@ -1755,6 +1764,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1766,7 +1776,6 @@ deny 45.138.16.239;
 deny 45.138.16.240;
 deny 45.138.16.248;
 deny 45.138.16.42;
-deny 45.138.16.70;
 deny 45.138.16.76;
 deny 45.138.87.142;
 deny 45.141.215.110;
@@ -1849,6 +1858,13 @@ deny 46.38.243.210;
 deny 47.254.142.180;
 deny 47.89.193.230;
 deny 50.118.225.222;
+deny 50.118.225.225;
+deny 50.118.225.226;
+deny 50.118.225.227;
+deny 50.118.225.230;
+deny 50.118.225.232;
+deny 50.118.225.233;
+deny 50.118.225.237;
 deny 5.104.86.6;
 deny 51.15.59.15;
 deny 51.195.166.174;
@@ -1864,6 +1880,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1985,6 +2002,7 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
+deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
